changes for About ME for under 640px

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <title>About | Robin Hale-Cooper</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -19,8 +19,6 @@
       </nav>
     </div>
   </header>
-
-  <br><br>
 
   <div id="main-container" class="container">
     <section class="main-section">
