--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <title>Contact | Robin Hale-Cooper</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -11,7 +11,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Robin Hale-Cooper</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -24,7 +24,7 @@
     <section class="main-section">
       <h1>Contact</h1>
 
-      <form id="contact-form">
+      <form id="contact-form" ; >
         <ul>
           <li>
             <label for="name">Name</label>
